# py-stock-learning

./: .gitignore  README.md  pyproject.toml
html/: s001_sma.html  s002_bbands.html  s003_ichimoku.html
src/: s001_sma.py  s002_bbands.py  s003_ichimoku.py
src/libs/: ichimoku.py
