[project]
name = "py-stock-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kand>=0.2.2",
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.7",
]
